--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=e2fa08a637cc2329adc8073f4e8d4fb9
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://symfony:idea@127.0.0.1:3306/aloitelaatikko
 ###< doctrine/doctrine-bundle ###
